welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Int
		case (_,_) => return false
                     ^