welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
	(num) match {
		case (num) if (num%10<2) => return true
		case (_,_) => return false
	}
}
